--- a/app/src/main/res/navigation/nav_login.xml
+++ b/app/src/main/res/navigation/nav_login.xml
@@ -11,21 +11,21 @@
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_cadastroFragment"
+            android:id="@+id/action_loginFragment_to_complementoCadastroFragment2"
             app:destination="@id/LoginToCadastrar" />
     </fragment>
     <fragment
-        android:id="@+id/complementoCadastroFragment"
-        android:name="com.example.pb_android_radion.fragment.ComplementoCadastroFragment"
-        android:label="fragment_complemento_cadastro"
-        tools:layout="@layout/fragment_complemento_cadastro" >
-        <action
-            android:id="@+id/returnToLogin"
-            app:destination="@id/loginFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/LoginToCadastrar"
+        android:id="@+id/LoginToCadastrar2"
         android:name="com.example.pb_android_radion.fragment.CadastroFragment"
         android:label="layout_cadastro"
         tools:layout="@layout/layout_cadastro" />
+    <fragment
+        android:id="@+id/LoginToCadastrar"
+        android:name="com.example.pb_android_radion.fragment.ComplementoCadastroFragment"
+        android:label="layout_cadastro"
+        tools:layout="@layout/layout_cadastro" >
+        <action
+            android:id="@+id/action_LoginToCadastrar_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
