--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -42,7 +42,7 @@
                         tools:ignore="MissingConstraints" />
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/imageViewIncluirFotoPerfil"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@android:drawable/ic_input_add"
