--- a/app/src/main/res/layout/layout_cadastro.xml
+++ b/app/src/main/res/layout/layout_cadastro.xml
@@ -46,7 +46,7 @@
                         tools:ignore="MissingConstraints" />
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/imageViewIncluirFotoPerfil"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@android:drawable/ic_input_add"
@@ -57,6 +57,7 @@
                         app:layout_constraintTop_toTopOf="@+id/imageViewPerfil"
                         app:layout_constraintVertical_bias="1.0"
                         tools:ignore="MissingConstraints" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
