Correção do erro no cadastro e login

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -52,7 +52,6 @@
                     android:id="@+id/textoEmailLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/fundoLogin"
                     android:textStyle="bold"
                     app:boxBackgroundMode="outline"
                     android:inputType="textEmailAddress"
@@ -65,6 +64,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/boxEmailLogin"
                         style="@style/config_edit"
+                        android:textColor="@color/branco"
                         android:hint="@string/textoEmail"
                         android:ems="10"
                         tools:layout_editor_absoluteX="29dp"
@@ -78,7 +78,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:backgroundTint="@color/fundoLogin"
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/branco"
                     app:boxBackgroundMode="outline"
                     android:inputType="textPassword"
                     android:textColor="@color/branco"
@@ -92,6 +93,7 @@
                         style="@style/config_edit"
                         android:hint="@string/textoSenha"
                         android:ems="10"
+                        android:textColor="@color/branco"
                         tools:layout_editor_absoluteX="29dp"
                         tools:layout_editor_absoluteY="325dp"
                         android:inputType="textPassword"
